[package]
name = "collapseloader"
version = "0.2.6"
description = "CollapseLoader"
authors = ["dest4590"]
edition = "2021"
build = "build.rs"

[lib]
name = "collapseloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = ["devtools"] }
tauri-plugin-opener = "2.5.2"
tauri-plugin-notification = "2.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
colored = "3.0.0"
rand = "0.9.2"
reqwest = { version = "0.12.28", features = ["blocking", "json", "stream"] }
semver = "1.0.27"
zip = "6.0.0"
tokio = { version = "1.49.0", features = ["macros"] }
opener = "0.8.3"
uuid = { version = "1.19.0", features = ["v4"] }
chrono = { version = "0.4.42", features = ["serde"] }
paste = "1.0.15"
open = "5.3.3"
md5 = "0.8.0"
discord-rich-presence = "1.0.0"
futures-util = "0.3.31"
base64 = "0.22.1"
tauri-plugin-dialog = "2.4.2"
dotenvy = "0.15.7"
tauri-plugin-fs = "2.4.4"
thiserror = "2.0.17"
native-dialog = "0.9.4"
sysinfo = "0.37.2"
socket2 = "0.6.1"

[target.'cfg(windows)'.dependencies]
winreg = { version = "0.55.0" }
windows = { version = "0.62.2", features = ["Win32_UI_HiDpi"] }

[profile.dev]
opt-level = 0
