[package]
name = "collapseloader"
version = "1.2.0"
description = "CollapseLoader"
authors = ["dest4590"]
edition = "2021"
build = "build.rs"

[lib]
name = "collapseloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["devtools", "tray-icon"] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-notification = "2.3.3"
tauri-plugin-deep-link = "2.4.7"
tauri-plugin-single-instance = { version = "2.4.0", features = ["deep-link"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
colored = "3.1.1"
rand = "0.10.1"
reqwest = { version = "0.13.3", features = [
    "blocking",
    "json",
    "stream",
    "multipart",
] }
semver = "1.0.28"
zip = "8.6.0"
tokio = { version = "1.52.2", features = ["macros", "process"] }
opener = "0.8.4"
uuid = { version = "1.23.1", features = ["v4"] }
chrono = { version = "0.4.44", features = ["serde"] }
paste = "1.0.15"
open = "5.3.4"
md5 = "0.8.0"
discord-rich-presence = "1.1.0"
futures-util = "0.3.32"
base64 = "0.22.1"
tauri-plugin-dialog = "2.7.1"
dotenvy = "0.15.7"
tauri-plugin-fs = "2.5.1"
thiserror = "2.0.18"
native-dialog = "0.9.6"
sysinfo = "0.38.4"
socket2 = "0.6.3"
sha2 = "0.11.0"
regex = "1.12.3"
flate2 = "1.1.9"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.1"
objc2-app-kit = { version = "0.3.1", features = ["NSApplication", "NSDockTile"] }
objc2-foundation = { version = "0.3.1", features = ["NSString"] }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5.7.1", default-features = false, features = ["tokio"] }

[target.'cfg(windows)'.dependencies]
junction = "2.0.0"
winreg = { version = "0.56.0" }
windows = { version = "0.62.2", features = [
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_Foundation",
] }

[profile.dev]
incremental = true
opt-level = 0
debug = 1
split-debuginfo = "unpacked"
codegen-units = 256

[profile.release]
lto = "thin"
codegen-units = 16
strip = true
panic = "abort"

[profile.dev.package."*"]
opt-level = 2
